old/michapp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: michapp-APPNAME
  labels:
    app: michapp-APPNAME
spec:
  selector:
    matchLabels:
      app: michapp-APPNAME
  replicas: 1
  template:
    metadata:
      labels:
        app: michapp-APPNAME
    spec:
      containers:
      - name: michapp-APPNAME
        image: nm-mgmt.iic.pl.ibm.com:8500/NAMESPACE/michapp-APPNAME:BUILD_NUMBER
        ports:
        - containerPort: 80
          name: appport
      nodeSelector:
        beta.kubernetes.io/arch: ppc64le
