old/michapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: michapp-APPNAME
  name: michapp-APPNAME
spec:
  ports:
  - name: appport
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: michapp-APPNAME
  sessionAffinity: None
  type: NodePort
