old/michapp-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  labels:
    app: michapp-APPNAME
  name: michapp-APPNAME
spec:
  rules:
  - host: APPNAME.cloud.iic.pl.ibm.com
    http:
      paths:
      - backend:
          serviceName: michapp-APPNAME
          servicePort: 80
  tls:
  - hosts: 
    - APPNAME.cloud.iic.pl.ibm.com
    secretName: host
